--- a/_includes/css/type.css
+++ b/_includes/css/type.css
@@ -33,5 +33,5 @@ ul.recentWork span.subtitle {
 }
 
 ul.recentWork a {
-    text-decoation:none !important;
+    text-decoration:none !important;
 }
